--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
         h1,
         h2,
-        p,
         div,
         div {
             text-align: center;
@@ -57,10 +56,11 @@
 
         h2 {
             font-size: 3em;
+            margin-top: 2em;
+            margin-bottom: 0.4em;
         }
 
-        div > table,
-        #gamerules {
+        div > table {
             color: rgb(250, 175, 24);
             border: 2px solid;
             margin-right: auto;
@@ -115,11 +115,23 @@
         .enter {
         }
 
+        #scores > table {
+            width: 400px;
+            font-size: 2.4em;
+            border: none;
+            text-align: left;
+        }
+
         #gamerules {
-            max-width: 600px;
-            border: 1px solid grey;
-            border-spacing: 5px;
+            max-width: 800px;
+            padding: 15px;
+            color: rgb(250, 175, 24);
             color: white;
+            margin-right: auto;
+            margin-left: auto;
+            font-size: 2em;
+            line-height: 1.2em;
+            /*text-align: left;*/
         }
 
         .freeAlien {
@@ -131,6 +143,13 @@
             font-size: 3em;
         }
 
+        .test{
+            display: inline-block;
+            width: 25px;
+            height: 25px;
+            color: white;
+        }
+
     </style>
 </head>
 <body>
@@ -139,44 +158,16 @@
 <div>
     <div class="showGameTime"></div>
 </div>
-<h2>Best scores</h2>
+<h2>Scores</h2>
 <div id="scores"></div>
 <h2>Game rules</h2>
-<p></p>
-<table id="gamerules">
-    <tr>
-        <td width="25px"></td>
-        <td></td>
-    </tr>
-
-    <tr>
-        <td colspan="2">Jesteś imprezowiczem. Poruszasz się po mieście poszukując w lokalach swoich znajomych i
-            zabierając ich ze sobą. Jednocześnie dołączają do ciebie inni imprezowicze, których możesz pozostawić tylko
-            w lokalach, gdzie są wolne miejsca. Gra kończy się gdy wejdziesz do miejsca "Best Party" tylko ze swoimi
-            znajomymi.
-        </td>
-    </tr>
-    <tr>
-        <td class="head"></td>
-        <td>TY</td>
-    </tr>
-    <tr>
-        <td class="friends"></td>
-        <td>Twój przyjaciel</td>
-    </tr>
-    <tr>
-        <td class="aliens"></td>
-        <td>Przypadkowy imprezowicz</td>
-    </tr>
-     <tr>
-        <td class="party">2</td>
-        <td>Miejsce imprezy oraz liczba wolnych tam miejsc.</td>
-    </tr>
-    <tr>
-        <td class="bestparty"></td>
-        <td>"Best Party" - miejsce zakończenia gry</td>
-    </tr>
-</table>
+<div id="gamerules">
+    Jesteś imprezowiczem <span class="head test"></span>.
+    Poruszasz się po mieście poszukując w lokalach swoich znajomych <span class="friends test"></span> i zabierając ich ze sobą.
+    Jednocześnie dołączają do ciebie inni przypadkowi imprezowicze <span class="aliens test"></span>.
+    Musisz pozbyć się ich, pozostawiając ich w lokalach z wolnymi miejscami oznaczonymi <span class="party test">2</span>.
+    Gra kończy się, gdy wejdziesz do miejsca "BestParty" <span class="bestparty test"></span> tylko ze swoimi znajomymi.
+</div>
 
 <script src="js/jquery-3.2.1.js"></script>
 <script>
@@ -210,15 +201,21 @@
         }
     ];
 
-    $ol.append(
-        bestScores.map(
-            function (item) {
-                return $('<li>').text(`${item.name}': ${item.playtime} seconds`);
-            }
+    $scores.append(
+        $('<table>').append(
+            bestScores.map(
+                function (item) {
+                    return $('<tr>')
+                        .append(
+                            $('<td>').text(item.name)
+                        )
+                        .append(
+                            $('<td>').text(`${item.playtime} sec.`)
+                        )
+                }
+            )
         )
     );
-
-    $scores.append($ol);
 
     var aliens = 0; // snake character ---------
     var friends = 0;
