--- a/index.html
+++ b/index.html
@@ -192,22 +192,8 @@
 
     var $scores = $('#scores');
     var bestScores = JSON.parse(localStorage.getItem('BestPartySnake')) || [];
+    refreshScores();
 
-    $scores.append(
-        $('<table>').append(
-            bestScores.map(
-                function (item) {
-                    return $('<tr>')
-                        .append(
-                            $('<td>').text(item.name)
-                        )
-                        .append(
-                            $('<td>').text(`${item.playtime} seconds`)
-                        )
-                }
-            )
-        )
-    );
 
     var aliens = 0; // snake character ---------
     var friends = 0;
@@ -514,7 +500,7 @@
                     if (seconds > bestScores[i].playtime) {
                         positionToInsert += 1;
                     }
-                };
+                }
                 return positionToInsert;
             }
 
@@ -534,17 +520,34 @@
                     }
                 );
             }
-            bestScores.splice(5)
+            bestScores.splice(5);
 
             localStorage.setItem('BestPartySnake', JSON.stringify(bestScores));
             $('form#saveScoreForm').toggle();
-//            refreshTasksList();
+            $scores.empty();
+            bestScores = JSON.parse(localStorage.getItem('BestPartySnake')) || [];
+            refreshScores();
+
         });
     }
 
-    function getScores () {
-        var scores = JSON.parse(localStorage.getItem('BestPartySnake'));
+    function refreshScores() {
 
+        $scores.append(
+            $('<table>').append(
+                bestScores.map(
+                    function (item) {
+                        return $('<tr>')
+                            .append(
+                                $('<td>').text(item.name)
+                            )
+                            .append(
+                                $('<td>').text(`${item.playtime} seconds`)
+                            )
+                    }
+                )
+            )
+        );
     }
 
     function stopGame() {
